--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">Movies</string>
-    <string name="help">Preicsa de ajuda?</string>
-    <string name="novo">Novo por aqui? Cadastre-se aqui</string>
-    <string name="lets">Vamos assistir?</string>
-    <string name="siga">Para assistir suas séries e filmes favoritos</string>
-    <string name="txt">faça o cadastro</string>
-    <string name="cadastrar">Cadastrar</string>
+    <string name="novo">New here? Register here</string>
+    <string name="lets">Let\'s watch?</string>
+    <string name="siga">To watch your favorite series and films</string>
+    <string name="txt">register now</string>
+    <string name="cadastrar">Register</string>
 </resources>
